# refinedc

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.disabled  ANNOTATIONS.md  ARCHITECTURE.md  DEVELOPERS.md  FAQ.md  GUIDE.md  LICENSE  Makefile  Makefile.local  README.md  _CoqProject  build.sh  coq-lithium.opam  count_annotations.py  count_stats.py  destructive_gen_data.py  dune  dune-project  rc-project.toml  refinedc-rcgen.opam  refinedc.opam  update_cerberus.sh
examples/: binary_search.c  btree.c  btree.h  container_of.c  flags.c  intptr.c  latch.c  lock.c  malloc1.c  mpool.c  mpool_simpl.c  mutable_map.c  ocaml_runtime.c  paper_example_2_1.c  paper_example_2_2.c  paper_examples.c  pointers.c  queue.c  quick_sort.c  reverse.c  shift.c  simple_union.c  spinlock.c  tagged_ptr.c  talk_demo1.c  talk_demo2.c  talk_demo3.c  talk_demo_alloc.c  talk_demo_alloc_full.c  tests.c  wrapping_add.c
examples/+rc+/btree/: code.v  proof_files
examples/+rc+/flags/: dune  proof_files  spec.v
examples/+rc+/latch/: latch_def.v  proof_files
examples/+rc+/lock/: code.v  proof_files  proof_write_locked.v  spec.v
examples/+rc+/malloc1/: code.v  dune  proof_files  proof_slab_alloc.v  proof_slab_free.v  proof_slab_init.v  spec.v
examples/+rc+/mpool/: code.v  proof_files  proof_mpool_add_chunk.v  proof_mpool_alloc_contiguous.v  proof_mpool_alloc_contiguous_no_fallback.v  proof_mpool_alloc_no_fallback.v  proof_mpool_free.v  proof_mpool_init_from.v  spec.v
examples/+rc+/mpool_simpl/: code.v  dune  proof_files  proof_main.v  spec.v
examples/+rc+/mutable_map/: code.v  dune  mutable_map_extra.v  proof_files  proof_fsm_init.v  proof_fsm_insert.v  proof_fsm_probe.v  proof_fsm_realloc_if_necessary.v  proof_fsm_slot_for_key.v
examples/+rc+/paper_examples/: code.v  proof_alloc.v  proof_files  proof_fork.v  proof_free.v  proof_test_thread_safe_alloc.v  proof_test_thread_safe_alloc_fork_fn.v  proof_thread_safe_alloc.v
examples/+rc+/queue/: code.v  proof_enqueue.v  proof_files  proof_init_queue.v  spec.v
examples/VerifyThis2021/: challenge1.c  challenge2.c
examples/include/: alloc.h  latch.h  spinlock.h
examples/scheduler/: .gitignore  Makefile
frontend/: ail_to_coq.ml  ail_to_coq.mli  cerb_wrapper.ml  cerb_wrapper.mli  comment_annot.ml  coq_ast.ml  coq_pp.ml  dune  extra.ml  location.ml  location.mli  main.ml  panic.ml  project.ml  rc_annot.ml  warn.ml
include/: dune  refinedc.h  refinedc_builtins_specs.h
linux/: README.md  buddy_alloc.c  early_alloc.c  list.c  page_alloc.c  pgtable.c
linux/casestudies/: early_alloc.c  page_alloc.c  page_alloc_find_buddy.c  pgtable.c
linux/pkvm/: early_alloc.c  spinlock.c
scripts/: rcgen  refinedc
theories/caesium/: base.v  bitfield.v  builtins_specs.v  byte.v  dune  ghost_state.v  heap.v  int_type.v  lang.v  layout.v  lifting.v  loc.v  notation.v  proofmode.v  struct.v  tactics.v  val.v
theories/examples/: .dir-locals.el
theories/lang/: base.v  bitfield.v  builtins_specs.v  byte.v  dune  ghost_state.v  heap.v  int_type.v  lang.v  layout.v  lifting.v  loc.v  notation.v  proofmode.v  struct.v  tactics.v  val.v
theories/lithium/: Z_bitblast.v  Z_solvers.v  all.v  base.v  classes.v  definitions.v  dune  hooks.v  infrastructure.v  instances.v  interpreter.v  lithium.v  lvar.v  normalize.v  proof_state.v  pure_definitions.v  simpl_classes.v  simpl_instances.v  solvers.v  syntax.v  tactics.v  tactics_extend.v
theories/typing/: adequacy.v  annotations.v  array.v  atomic_bool.v  automation.v  axioms.v  base.v  bitfield.v  boolean.v  bytes.v  constrained.v  dune  exist.v  fixpoint.v  function.v  globals.v  immovable.v  int.v  intptr.v  locked.v  malloc.v  naive_simpl.v  optional.v  own.v  padded.v  programs.v  singleton.v  struct.v  tagged_ptr.v  tyfold.v  type.v  type_options.v  typing.v  uninit.v  union.v  wand.v  zeroed.v
tutorial/: alloc.h  alloc_internal.h  list.h  lithium.c  quicksort_exercise.c  quicksort_solution.c  t00_intro.c  t01_basic.c  t02_evars.c  t02_pointers.c  t03_list.c  t04_alloc.c  t05_main.c  t06_struct.c  t07_arrays.c  t08_tree.c  t09_switch.c  t10_loops.c  t11_tree_set.c  t2_pointers.c  t3_list.c  t4_alloc.c  t5_main.c  t7_arrays.c  t8_tree.c  t9_switch.c  talloc_internal.h
tutorial/VerifyThis/: t01_refinements.c  t02_ownership.c  t03_ownership_and_refinements.c  t04_loops.c
tutorial/adequacy/: adequacy.v  dune
tutorial/lithium/: README.md  class_instances.v  dune  lang.v  notation.v  primitive_laws.v  proofmode.v  tactics.v  test.v  tutorial.v
(+1009 files in other folders)
