(executable
 (name main)
 (public_name rcgen)
 (package refinedc-rcgen)
 (preprocess (per_module ((action (run pa_ocaml %{input-file})) rc_annot)))
 (flags (:standard -w -27 -I +../cerberus/frontend)) ; FIXME crazy hack.
 (foreign_stubs (language c) (names stubs))
 (libraries cmdliner str unix earley.core cerberus.frontend
  cerberus.backend_common cerberus.mem.concrete cerberus.util))
